--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
       </nav>
       <address class="address">
-        <ul>
+        <ul class="page-main">
           <li>
             <a href="mailto:info@devstudio.com" class="link-address"
               >info@devstudio.com</a
@@ -50,7 +50,7 @@
       <!--Section-2-->
       <section>
         <h2>content</h2>
-        <ul>
+        <ul class="page-main">
           <li>
             <h3 class="title">Strategy</h3>
             <p class="text">
@@ -87,7 +87,7 @@
       <!--Section-3-->
       <section class="section-team">
         <h2 class="section-title">Our Team</h2>
-        <ul>
+        <ul class="page-main">
           <li class="list-team">
             <img
               src="./images/Mark-Guerrero.jpg"
@@ -132,7 +132,7 @@
       </section>
       <section>
         <h2 class="section-title">Our Portfolio</h2>
-        <ul>
+        <ul class="page-main">
           <li>
             <img
               src="./images/Banking-App.jpg"
