--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             >Web<span class="span">Studio</span></a
           >
           <ul class="page-nav">
-            <li><a href="./index.html" class="link">Studio</a></li>
+            <li><a href="./index.html" class="link-1">Studio</a></li>
             <li><a href="" class="link">Portfolio</a></li>
             <li><a href="" class="link">Contacts</a></li>
           </ul>
@@ -80,7 +80,7 @@
             <li class="content-list">
               <div class="icon-box">
                 <svg class="content-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1">></use>
                 </svg>
               </div>
               <h3 class="title">Punctuality</h3>
@@ -104,7 +104,7 @@
             <li class="content-list">
               <div class="icon-box">
                 <svg class="content-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1">></use>
                 </svg>
               </div>
               <h3 class="title">Technologies</h3>
