--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             >Web<span class="span">Studio</span></a
           >
           <ul class="page-nav">
-            <li><a href="./index.html" class="link-1">Studio</a></li>
+            <li><a href="./index.html" class="link-first">Studio</a></li>
             <li><a href="" class="link">Portfolio</a></li>
             <li><a href="" class="link">Contacts</a></li>
           </ul>
