--- a/index.html
+++ b/index.html
@@ -624,7 +624,135 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="subscribe-text">Subscribe</p>
+          <form class="footer-form" name="footer-name">
+            <label for="">
+              <input
+                class="email"
+                type="email"
+                name="Email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <svg class="btn-icon" width="24" height="24">
+                <use href="./images/modal-icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-btn" type="button">
+          <svg class="modal-btn-icon" width="8" height="8">
+            <use
+              href="./images/modal-icons.svg#icon-close-black-18dp-2-1-1"
+            ></use>
+          </svg>
+        </button>
+
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form
+          class="modal-form"
+          name="serviceForm"
+          autocomplete="on"
+          novalidate
+        >
+          <div class="modal-form-field">
+            <label class="form-label" for="username"
+              >Name
+              <div class="modal-form-wrapper">
+                <input
+                  class="form-input"
+                  type="text"
+                  name="username"
+                  id="username"
+                  required
+                />
+                <svg class="modal-form-icon" width="18" height="18">
+                  <use
+                    href="./images/modal-icons.svg#icon-person-black-18dp-1"
+                  ></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+
+          <div class="modal-form-field">
+            <label class="form-label" for="userphone"
+              >Phone
+              <div class="modal-form-wrapper">
+                <input
+                  class="form-input"
+                  type="tel"
+                  name="userphone"
+                  id="userphone"
+                  required
+                />
+                <svg class="modal-form-icon" width="18" height="24">
+                  <use
+                    href="./images/modal-icons.svg#icon-phone-black-18dp-1"
+                  ></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+
+          <div class="modal-form-field">
+            <label class="form-label" for="useremail"
+              >Email
+              <div class="modal-form-wrapper">
+                <input
+                  class="form-input"
+                  type="email"
+                  name="useremail"
+                  id="useremail"
+                  required
+                />
+                <svg class="modal-form-icon" width="18" height="24">
+                  <use
+                    href="./images/modal-icons.svg#icon-email-black-18dp-1"
+                  ></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="modal-form-field">
+            <label class="form-label" for="usercomment"
+              >Comment
+              <textarea
+                class="form-textarea"
+                name="usercomment"
+                id="usercomment"
+                placeholder="Text input"
+              ></textarea>
+            </label>
+          </div>
+
+          <div class="modal-form-agreement">
+            <input
+              type="checkbox"
+              id="usergreement"
+              name="usergreement"
+              class="agreement-input visually-hidden"
+            />
+            <label for="usergreement" class="modal-form-box">
+              <span class="custom-checkbox">
+                <svg class="custom-checkbox-icon" width="10" height="8">
+                  <use href="./images/modal-icons.svg#icon-Vector-3"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="modal-form-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="btn-submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
