--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
             <button class="footer-btn" type="submit">
               Subscribe
               <svg class="btn-icon" width="24" height="24">
-                <use href="./images/modal-icons.svg#icon-Frame-3"></use>
+                <use href="./images/icons.svg#icon-Frame-3"></use>
               </svg>
             </button>
           </form>
@@ -650,7 +650,7 @@
         <button class="modal-btn" type="button">
           <svg class="modal-btn-icon" width="8" height="8">
             <use
-              href="./images/modal-icons.svg#icon-close-black-18dp-2-1-1"
+              href="./images/icons.svg#icon-close-black-18dp-2-1-1"
             ></use>
           </svg>
         </button>
@@ -675,7 +675,7 @@
                 />
                 <svg class="modal-form-icon" width="18" height="18">
                   <use
-                    href="./images/modal-icons.svg#icon-person-black-18dp-1"
+                    href="./images/icons.svg#icon-person-black-18dp-1"
                   ></use>
                 </svg>
               </div>
@@ -695,7 +695,7 @@
                 />
                 <svg class="modal-form-icon" width="18" height="24">
                   <use
-                    href="./images/modal-icons.svg#icon-phone-black-18dp-1"
+                    href="./images/icons.svg#icon-phone-black-18dp-1"
                   ></use>
                 </svg>
               </div>
@@ -715,7 +715,7 @@
                 />
                 <svg class="modal-form-icon" width="18" height="24">
                   <use
-                    href="./images/modal-icons.svg#icon-email-black-18dp-1"
+                    href="./images/icons.svg#icon-email-black-18dp-1"
                   ></use>
                 </svg>
               </div>
@@ -743,7 +743,7 @@
             <label for="usergreement" class="modal-form-box">
               <span class="custom-checkbox">
                 <svg class="custom-checkbox-icon" width="10" height="8">
-                  <use href="./images/modal-icons.svg#icon-Vector-3"></use>
+                  <use href="./images/icons.svg#icon-Vector-3"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
