--- a/index.html
+++ b/index.html
@@ -627,11 +627,11 @@
         <div class="subscribe">
           <p class="subscribe-text">Subscribe</p>
           <form class="footer-form" name="footer-name">
-            <label for="">
+            <label for="email">
               <input
                 class="email"
                 type="email"
-                name="Email"
+                name="email"
                 placeholder="E-mail"
               />
             </label>
@@ -645,13 +645,11 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-btn" type="button">
           <svg class="modal-btn-icon" width="8" height="8">
-            <use
-              href="./images/icons.svg#icon-close-black-18dp-2-1-1"
-            ></use>
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
           </svg>
         </button>
 
@@ -665,20 +663,17 @@
           <div class="modal-form-field">
             <label class="form-label" for="username"
               >Name
-              <div class="modal-form-wrapper">
-                <input
-                  class="form-input"
-                  type="text"
-                  name="username"
-                  id="username"
-                  required
-                />
-                <svg class="modal-form-icon" width="18" height="18">
-                  <use
-                    href="./images/icons.svg#icon-person-black-18dp-1"
-                  ></use>
-                </svg>
-              </div>
+
+              <input
+                class="form-input"
+                type="text"
+                name="username"
+                id="username"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
             </label>
           </div>
 
@@ -694,9 +689,7 @@
                   required
                 />
                 <svg class="modal-form-icon" width="18" height="24">
-                  <use
-                    href="./images/icons.svg#icon-phone-black-18dp-1"
-                  ></use>
+                  <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                 </svg>
               </div>
             </label>
@@ -714,9 +707,7 @@
                   required
                 />
                 <svg class="modal-form-icon" width="18" height="24">
-                  <use
-                    href="./images/icons.svg#icon-email-black-18dp-1"
-                  ></use>
+                  <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
                 </svg>
               </div>
             </label>
