--- a/index.html
+++ b/index.html
@@ -627,8 +627,9 @@
         <div class="subscribe">
           <p class="subscribe-text">Subscribe</p>
           <form class="footer-form" name="footer-name">
-            <label for="email">
+            <label for="useremail">
               <input
+                id="useremail"
                 class="email"
                 type="email"
                 name="email"
@@ -680,36 +681,34 @@
           <div class="modal-form-field">
             <label class="form-label" for="userphone"
               >Phone
-              <div class="modal-form-wrapper">
-                <input
-                  class="form-input"
-                  type="tel"
-                  name="userphone"
-                  id="userphone"
-                  required
-                />
-                <svg class="modal-form-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-                </svg>
-              </div>
+
+              <input
+                class="form-input"
+                type="tel"
+                name="userphone"
+                id="userphone"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
             </label>
           </div>
 
           <div class="modal-form-field">
             <label class="form-label" for="useremail"
               >Email
-              <div class="modal-form-wrapper">
-                <input
-                  class="form-input"
-                  type="email"
-                  name="useremail"
-                  id="useremail"
-                  required
-                />
-                <svg class="modal-form-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-                </svg>
-              </div>
+
+              <input
+                class="form-input"
+                type="email"
+                name="useremail"
+                id="useremail"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
             </label>
           </div>
           <div class="modal-form-field">
