--- a/index.html
+++ b/index.html
@@ -627,9 +627,9 @@
         <div class="subscribe">
           <p class="subscribe-text">Subscribe</p>
           <form class="footer-form" name="footer-name">
-            <label for="useremail">
+            <label for="email">
               <input
-                id="useremail"
+                id="email"
                 class="email"
                 type="email"
                 name="email"
