--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                 id="user-name"
                 required
               />
-              <svg class="modal-form-icon" width="18" height="18">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
@@ -708,16 +708,16 @@
               </svg>
             </div>
           </div>
-          <div class="modal-form-field">
+          <div class="modal-form-comment">
             <label class="form-label" for="user-comment"
-              >Comment
+              >Comment</label>
               <textarea
                 class="form-textarea"
                 name="user-comment"
                 id="user-comment"
                 placeholder="Text input"
               ></textarea>
-            </label>
+            
           </div>
 
           <div class="modal-form-agreement">
