--- a/index.html
+++ b/index.html
@@ -709,15 +709,13 @@
             </div>
           </div>
           <div class="modal-form-comment">
-            <label class="form-label" for="user-comment"
-              >Comment</label>
-              <textarea
-                class="form-textarea"
-                name="user-comment"
-                id="user-comment"
-                placeholder="Text input"
-              ></textarea>
-            
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              class="form-textarea"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
           </div>
 
           <div class="modal-form-agreement">
