--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header hide" id="home">
       <div class="container">
         <nav class="header-nav">
           <a href="./index.html" class="logo"
             >Web<span class="span">Studio</span></a
           >
+          <button class="mobile-menu-btn" type="button">
+            <svg class="mobile-menu-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+            </svg>
+          </button>
           <ul class="page-nav">
             <li><a href="./index.html" class="link-first">Studio</a></li>
             <li><a href="" class="link">Portfolio</a></li>
@@ -54,14 +59,14 @@
     </header>
     <main>
       <!--Section-1-->
-      <section class="page-title">
+      <section class="page-title hide">
         <div class="container">
           <h1 class="title-hero">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
         </div>
       </section>
       <!--Section-2-->
-      <section class="content">
+      <section class="content hide">
         <div class="container">
           <h2 class="visually-hidden">content</h2>
           <ul class="content-ul">
@@ -117,12 +122,16 @@
         </div>
       </section>
       <!--Section-3-->
-      <section class="section-team">
+      <section class="section-team hide">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="card-set">
             <li class="card-set-team">
               <img
+                srcset="
+                  ./images/Mark-Guerrero.jpg    1x,
+                  ./images/Mark-Guerrero@2x.jpg 2x
+                "
                 src="./images/Mark-Guerrero.jpg"
                 alt="Photo of Mark Guerrero"
                 width="264"
@@ -202,6 +211,7 @@
             </li>
             <li class="card-set-team">
               <img
+                srcset="./images/Tom-Ford.jpg 1x, ./images/Tom-Ford@2x.jpg 2x"
                 src="./images/Tom-Ford.jpg"
                 alt="Photo of Tom Ford"
                 width="264"
@@ -282,6 +292,10 @@
 
             <li class="card-set-team">
               <img
+                srcset="
+                  ./images/Camila-Garcia.jpg    1x,
+                  ./images/Camila-Garcia@2x.jpg 2x
+                "
                 src="./images/Camila-Garcia.jpg"
                 alt="Photo of Camila Garcia"
                 width="264"
@@ -361,6 +375,10 @@
             </li>
             <li class="card-set-team">
               <img
+                srcset="
+                  ./images/Daniel-Wilson.jpg    1x,
+                  ./images/Daniel-Wilson@2x.jpg 2x
+                "
                 src="./images/Daniel-Wilson.jpg"
                 alt="Photo of Daniel Wilson"
                 width="264"
@@ -441,13 +459,17 @@
           </ul>
         </div>
       </section>
-      <section class="section-portfolio">
+      <section class="section-portfolio hide">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="card-set-portfolio">
             <li class="card-portfolio">
               <div class="portfolio-box">
                 <img
+                  srcset="
+                    ./images/Banking-App.jpg    1x,
+                    ./images/Banking-App@2x.jpg 2x
+                  "
                   src="./images/Banking-App.jpg"
                   alt="Photo of Banking App"
                   width="360"
@@ -467,6 +489,10 @@
             <li class="card-portfolio">
               <div class="portfolio-box">
                 <img
+                  srcset="
+                    ./images/Cashless-Payment.jpg    1x,
+                    ./images/Cashless-Payment@2x.jpg 2x
+                  "
                   src="./images/Cashless-Payment.jpg"
                   alt="Photo of cashless payment by QR code"
                   width="360"
@@ -487,6 +513,10 @@
             <li class="card-portfolio">
               <div class="portfolio-box">
                 <img
+                  srcset="
+                    ./images/Meditaion-App.jpg    1x,
+                    ./images/Meditaion-App@2x.jpg 2x
+                  "
                   src="./images/Meditaion-App.jpg"
                   alt="Photo of laptop and phone with meditation app open"
                   width="360"
@@ -506,6 +536,10 @@
             <li class="card-portfolio">
               <div class="portfolio-box">
                 <img
+                  srcset="
+                    ./images/Taxi-Service.jpg    1x,
+                    ./images/Taxi-Service@2x.jpg 2x
+                  "
                   src="./images/Taxi-Service.jpg"
                   alt="Photo of the interior of the car"
                   width="360"
@@ -525,6 +559,10 @@
             <li class="card-portfolio">
               <div class="portfolio-box">
                 <img
+                  srcset="
+                    ./images/Screen-Illustrations.jpg    1x,
+                    ./images/Screen-Illustrations@2x.jpg 2x
+                  "
                   src="./images/Screen-Illustrations.jpg"
                   alt="Phone photo with space wallpaper"
                   width="360"
@@ -544,6 +582,10 @@
             <li class="card-portfolio">
               <div class="portfolio-box">
                 <img
+                  srcset="
+                    ./images/Online-Courses.jpg    1x,
+                    ./images/Online-Courses@2x.jpg 2x
+                  "
                   src="./images/Online-Courses.jpg"
                   alt="Photo of a girl with a phone and headphones"
                   width="360"
@@ -564,7 +606,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer hide">
       <div class="container">
         <div class="div-logo">
           <a href="./index.html" class="logo-footer"
@@ -646,7 +688,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-btn" type="button">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -739,6 +781,83 @@
           <button type="submit" class="btn-submit">Send</button>
         </form>
       </div>
+    </div>
+    <div class="mobile-menu">
+      <button class="mobile-menu-btn" type="button">
+        <svg class="mobile-menu-btn-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
+        </svg>
+      </button>
+      <ul class="mobile-menu-list">
+        <li class="mobile-menu-item">
+          <a href="#" class="mobile-menu-link-">Studio</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="#" class="mobile-menu-link">Portfolio</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="#" class="mobile-menu-link">Contacts</a>
+        </li>
+      </ul>
+      <ul class="mobile-menu-contacts">
+        <li class="mobile-menu-address">
+          <a href="tel:+110001111111" class="mobile-menu-contacts-link-1"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+        <li class="mobile-menu-address">
+          <a href="mailto:info@devstudio.com" class="mobile-menu-contacts-link"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+
+      <ul class="footer-social">
+        <li class="social-box">
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            class="social-link"
+          >
+            <svg class="footer-icon" width="24" height="24" fill="white">
+              <use href="./images/icons.svg#icon-instagram-2"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-box">
+          <a
+            href="https://www.twitter.com/"
+            target="_blank"
+            class="social-link"
+          >
+            <svg class="footer-icon" width="24" height="24" fill="white">
+              <use href="./images/icons.svg#icon-twitter-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-box">
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            class="social-link"
+          >
+            <svg class="footer-icon" width="24" height="24" fill="white">
+              <use href="./images/icons.svg#icon-facebook-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-box">
+          <a
+            href="https://www.linkedin.com/"
+            target="_blank"
+            class="social-link"
+          >
+            <svg class="footer-icon" width="24" height="24" fill="white">
+              <use href="./images/icons.svg#icon-linkedin-1"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
