--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header hide" id="home">
+    <header class="header" id="home">
       <div class="container">
         <nav class="header-nav">
           <a href="./index.html" class="logo"
@@ -59,14 +59,14 @@
     </header>
     <main>
       <!--Section-1-->
-      <section class="page-title hide">
+      <section class="page-title">
         <div class="container">
           <h1 class="title-hero">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
         </div>
       </section>
       <!--Section-2-->
-      <section class="content hide">
+      <section class="content">
         <div class="container">
           <h2 class="visually-hidden">content</h2>
           <ul class="content-ul">
@@ -122,7 +122,7 @@
         </div>
       </section>
       <!--Section-3-->
-      <section class="section-team hide">
+      <section class="section-team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="card-set">
@@ -459,7 +459,7 @@
           </ul>
         </div>
       </section>
-      <section class="section-portfolio hide">
+      <section class="section-portfolio">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="card-set-portfolio">
@@ -606,7 +606,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer hide">
+    <footer class="footer">
       <div class="container">
         <div class="div-logo">
           <a href="./index.html" class="logo-footer"
@@ -688,7 +688,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-btn" type="button">
           <svg class="modal-btn-icon" width="8" height="8">
