--- a/index.html
+++ b/index.html
@@ -782,82 +782,86 @@
         </form>
       </div>
     </div>
-    <div class="mobile-menu">
-      <button class="mobile-menu-btn" type="button">
-        <svg class="mobile-menu-btn-icon" width="8" height="8">
-          <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
-        </svg>
-      </button>
-      <ul class="mobile-menu-list">
-        <li class="mobile-menu-item">
-          <a href="#" class="mobile-menu-link-">Studio</a>
-        </li>
-        <li class="mobile-menu-item">
-          <a href="#" class="mobile-menu-link">Portfolio</a>
-        </li>
-        <li class="mobile-menu-item">
-          <a href="#" class="mobile-menu-link">Contacts</a>
-        </li>
-      </ul>
-      <ul class="mobile-menu-contacts">
-        <li class="mobile-menu-address">
-          <a href="tel:+110001111111" class="mobile-menu-contacts-link-1"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-        <li class="mobile-menu-address">
-          <a href="mailto:info@devstudio.com" class="mobile-menu-contacts-link"
-            >info@devstudio.com</a
-          >
-        </li>
-      </ul>
+    <div class="backdrop-mobile-menu">
+      <div class="mobile-menu">
+        <button class="mobile-menu-btn" type="button">
+          <svg class="mobile-menu-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
+          </svg>
+        </button>
+        <ul class="mobile-menu-list">
+          <li class="mobile-menu-item">
+            <a href="#" class="mobile-menu-link-">Studio</a>
+          </li>
+          <li class="mobile-menu-item">
+            <a href="#" class="mobile-menu-link">Portfolio</a>
+          </li>
+          <li class="mobile-menu-item">
+            <a href="#" class="mobile-menu-link">Contacts</a>
+          </li>
+        </ul>
+        <ul class="mobile-menu-contacts">
+          <li class="mobile-menu-address">
+            <a href="tel:+110001111111" class="mobile-menu-contacts-link-1"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li class="mobile-menu-address">
+            <a
+              href="mailto:info@devstudio.com"
+              class="mobile-menu-contacts-link"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
 
-      <ul class="footer-social">
-        <li class="social-box">
-          <a
-            href="https://www.instagram.com/"
-            target="_blank"
-            class="social-link"
-          >
-            <svg class="footer-icon" width="24" height="24" fill="white">
-              <use href="./images/icons.svg#icon-instagram-2"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-box">
-          <a
-            href="https://www.twitter.com/"
-            target="_blank"
-            class="social-link"
-          >
-            <svg class="footer-icon" width="24" height="24" fill="white">
-              <use href="./images/icons.svg#icon-twitter-1"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-box">
-          <a
-            href="https://www.facebook.com/"
-            target="_blank"
-            class="social-link"
-          >
-            <svg class="footer-icon" width="24" height="24" fill="white">
-              <use href="./images/icons.svg#icon-facebook-1"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-box">
-          <a
-            href="https://www.linkedin.com/"
-            target="_blank"
-            class="social-link"
-          >
-            <svg class="footer-icon" width="24" height="24" fill="white">
-              <use href="./images/icons.svg#icon-linkedin-1"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+        <ul class="footer-social">
+          <li class="social-box">
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="social-link"
+            >
+              <svg class="footer-icon" width="24" height="24" fill="white">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-box">
+            <a
+              href="https://www.twitter.com/"
+              target="_blank"
+              class="social-link"
+            >
+              <svg class="footer-icon" width="24" height="24" fill="white">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-box">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="social-link"
+            >
+              <svg class="footer-icon" width="24" height="24" fill="white">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-box">
+            <a
+              href="https://www.linkedin.com/"
+              target="_blank"
+              class="social-link"
+            >
+              <svg class="footer-icon" width="24" height="24" fill="white">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
