--- a/index.html
+++ b/index.html
@@ -774,8 +774,10 @@
                   <use href="./images/icons.svg#icon-Vector-3"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a href="#" class="modal-form-link">Privacy Policy</a>
+              <span class="agreement-text">
+                I accept the terms and conditions of the
+                <a href="#" class="modal-form-link">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button type="submit" class="btn-submit">Send</button>
